# office-janitor

./: .gitignore  DRAFT_CONVERSION_PLAN.md  Makefile  README.md  TODO_VBS_PORT.md  agents.md  config.example.json  office-janitor.spec  office_janitor.py  oj_entry.py  pyproject.toml  readme.md  spec.md  test_spin.py  todo.md
bucket/: config.example.json  office-janitor.json
docs/: CLI_COMPATIBILITY.md  GAP_ANALYSIS_2025.md  MS_KB_GAP_ANALYSIS.md  REPAIR.md  SCRUBBER_GAP_ANALYSIS.md
oem/: FullRemoval.xml  FullRepair.xml  OSPP.VBS  QuickRepair.xml  Repair_Business_x64.xml  Repair_Interactive.xml  Repair_Multilang.xml  Repair_Office2019_x64.xml  Repair_Office2021_x64.xml  Repair_Office2024_x64.xml  Repair_ProPlus_Visio_Project.xml  Repair_ProPlus_x64.xml  Repair_ProPlus_x86.xml  Repair_SharedComputer.xml
office-janitor-draft-code/: OfficeScrubber.cmd  OfficeScrubberAIO.cmd  README.md
out_vbs_chunks/: OffScrub03.part1.txt  OffScrub03.part2.txt  OffScrub03.part3.txt  OffScrub07.part1.txt  OffScrub07.part2.txt  OffScrub07.part3.txt  OffScrub10.part1.txt  OffScrub10.part2.txt  OffScrub10.part3.txt  OffScrubC2R.part1.txt  OffScrubC2R.part2.txt  OffScrub_O15msi.part1.txt  OffScrub_O15msi.part2.txt  OffScrub_O15msi.part3.txt  OffScrub_O16msi.part1.txt  OffScrub_O16msi.part2.txt  OffScrub_O16msi.part3.txt
scripts/: activate_venv.ps1  build_dist.ps1  build_pyinstaller.ps1  lint_format.ps1  release_pypi.ps1  release_pypi.py  test.ps1  type_check.ps1
src/: __init__.py
tests/: __init__.py  test_appx_uninstall.py  test_auto_repair.py  test_c2r_licensing.py  test_cleanup_tools.py  test_cli_help.py  test_constants.py  test_detect.py  test_elevation.py  test_encoding_helpers.py  test_exec_utils.py  test_fs_tools.py  test_guid_utils.py  test_logging_ext.py  test_main_and_ui.py  test_msi_components.py  test_odt_build.py  test_off_scrub_native.py  test_off_scrub_scripts.py  test_plan.py  test_registry_tools.py  test_registry_user.py  test_release_pypi_script.py  test_repair.py  test_safety.py  test_scrub.py  test_tasks_services.py  (+2 more)
(+135 files in other folders)
